# c-sort

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  testgen.py
.github/workflows/: build.yml
data/: test_data.txt
src/: main.c  sort.c  sort.h  test.c  test.h
src/sortlibs/: sort.c  sort.h
src/tests/: test.c  test.h
